<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Battleships</string>
    <string name="action_settings">Settings</string>
    <string name="action_hiscores">Top Scores and Credits</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_hi_scores">Top Scores</string>
    <string name="sound_check_title">Sound Effects</string>
    <string name="sound_check_summary">Enable or disable game sound effects.</string>
    <string name="pref_boardSelection">Game Board</string>
    <string name="pref_boardSelection_default">Board 1 (6x6)</string>
	<string name="hi_scores_top_scores_title">Top Scores</string>
	<string name="hi_scores_credits_title">Credits</string>
	<string name="hi_scores_credits_line_1">Game programmed by</string>
	<string name="hi_scores_credits_line_2">Joe Bockskopf</string>
	<string name="hi_scores_credits_line_3">for CSCI E-65 (Fall 2013)</string>
	<string name="hi_scores_credits_line_4">Game sounds courtesy of freeSFX</string>
	<string name="hi_scores_credits_line_5">http://www.freesfx.co.uk</string>
	<string name="board1name">Board 1 (6x6)</string>
	<string name="board2name">Board 2 (6x6)</string>
	<string name="board3name">Board 3 (8x8)</string>
	<string name="board4name">Board 4 (8x8)</string>
	<string name="board5name">Board 5 (10x10)</string>
	<string name="board6name">Board 6 (10x10)</string>
	<string name="resign">Resign</string>
	<string name="clear">Clear</string>
	<string name="resignAlertMessage">All grid cells will be revealed and the game will end.</string>
	<string name="clearAlertMessage">All grid cells will be cleared.</string>
	<string name="cancelAlertBtn">Cancel</string>
	<string name="continueAlertBtn">Continue</string>
	<string name="constitution">USS Constitution</string>
</resources>
